Separate Android Encryption Password from Lockscreen Password
This permits the use of a different (hopefully longer and more complex!) encryption
password, while using a simpler (and easier to type) lockscreen password.

Based on omnirom patch:
Ref: omnirom/android_packages_apps_Settings@78e9a97

Conflicts:
	AndroidManifest.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -22,4 +22,12 @@
     <string name="app_not_so_special_disable_dlg_title">Disable installed app?</string>
     <string name="app_not_so_special_disable_dlg_text">If you disable app, you will not be able to open it without enabling it back. Your data will not be deleted.</string>
 
+    <!-- Title for PreferenceScreen to change encryption password [CHAR LIMIT=22] -->
+    <string name="change_crypt_password_title">Change password</string>
+    <!-- Summary for PreferenceScreen to change encryption password [CHAR LIMIT=45] -->
+    <string name="change_crypt_password_summary">Change the password used for device encryption</string>
+
+    <!-- Header on first screen of choose encryption password [CHAR LIMIT=30] -->
+    <string name="encryptionpassword_choose_your_password_header">Set encryption password</string>
+
 </resources>
