AppOps come back
- Enable it again
- Expose it in Security Settings
- Fix Array Out of Bounds Exception

--- a/res/xml/security_settings_misc.xml
+++ b/res/xml/security_settings_misc.xml
@@ -58,6 +58,11 @@
                 android:summaryOn="@string/install_unknown_applications"
                 android:persistent="false" />
 
+       <Preference 
+                android:key="appops_settings"
+                android:title="@string/appops_settings_title"
+                android:fragment="com.android.settings.applications.AppOpsSummary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:key="credentials_management"
