[2/2] Block apps from changing lockscreen pass
1. android_frameworks_base
2. android_packages_apps_settings

Added option in Settings > Security > Device Administation > Block Apps from Changing Locscreen Password to disable or change password remotely by Device Administrator Apps. This option is disabled by default. Apps will be informed that password change failed.

Conflicts:
	res/values/custom_strings.xml
	res/xml/security_settings_misc.xml
	src/com/android/settings/SecuritySettings.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -30,4 +30,8 @@
     <!-- Header on first screen of choose encryption password [CHAR LIMIT=30] -->
     <string name="encryptionpassword_choose_your_password_header">Set encryption password</string>
 
+    <!-- Block Device Admins Apps from changing lockscreen -->
+    <string name="block_device_admin_password_change_title">Block Apps from Changing Lockscreen Password</string>
+    <string name="block_device_admin_password_change_summary">Block changes to lockscreen password from enabled Device Administrator Apps (ex. Android Device Manager)</string>
+
 </resources>
