--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -16,7 +16,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- App Ops -->
-    <string name="appops_settings_title">AppOps</string>
+    <!-- [CHAR LIMIT=NONE] App ops settings summary, on main settings screen. If clicked, the user is taken to a settings screen for app operations -->
+    <string name="app_ops_settings_summary">View or change app permissions</string>
 
     <!-- Disable installed apps -->
     <string name="app_not_so_special_disable_dlg_title">Disable installed app?</string>
