--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -38,4 +38,9 @@
     <string name="block_device_admin_password_change_title">Block Apps from Changing Lockscreen Password</string>
     <string name="block_device_admin_password_change_summary">Block changes to lockscreen password from enabled Device Administrator Apps (ex. Android Device Manager)</string>
 
+    <!-- Advanced reboot options -->
+    <string name="advanced_reboot_title">Advanced reboot</string>
+    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery or bootloader</string>
+
+
 </resources>
